# VisionWatch-OCR

./: .gitignore  ARCHITECTURE.md  LICENSE  PUBLIC_SOURCE_SCOPE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
src/visionwatch/: __init__.py  formula.py  freshness.py  preprocess.py
tests/: test_formula_and_freshness.py
