[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "visionwatch-portfolio"
version = "1.2.0"
description = "Selected local OCR monitoring components"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "opencv-python>=4.10"
]

[tool.setuptools.packages.find]
where = ["src"]
